and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October 24th, 2014 M.Asai (run-V10-00-33)
- Fix cleaning up of kept events when Vis thread keeps events.

October 23rd, 2014 A.Dotti J.Apostolakis (run-V10-00-32)
- Enable use of G4ParticlesWorkspace. Requires particles-V10-00-24

October 17th, 2014 A.Dotti (run-V10-00-31)
- G4RunManagerKernel::RunTermination() workers do not
  call G4ProductionCutsTable::PhysicsTableUpdated()
- G4WorkerRunManager::TermianteEventLoop() implemented
  in workerd and avoid data-race on shared 
  resource fGeometryHasBeenDestroyed
- G4WorkerThread::UpdateGeometryAndPhysicsVectorFromMaster
  remove mechanism of copying pointer of region that is 
  not needed

October 14th, 2014 M.Asai (run-V10-00-30)
- G4MTRunManager : Make sure G4RunManager::TerminateEventLoop() is
  invoked at the end of run.

October 1st, 2015 M.Asai (run-V10-00-29)
- Introduing the mechanism of G4Event not to be deleted until it is
  visualized by the other thread.

August 26th, 2014 M.Asai (run-V10-00-28)
- All the G4ParallelWorldProcess objects of all threads update their
  corresponding world volumes when the entire geometry has been
  destroyed and rebuilt from scratch. Addressing further to bug 
  report #1665. Co-working with procscore-V10-00-00.

August 25th, 2014 M.Asai (run-V10-00-27)
- G4VScoringMesh is cleaned when geometry is rebuilt from
  scratch. Addressing further to bug report #1665. Co-working with
  digits_hits-V10-00-08.

August 22nd, 2014 M.Asai (run-V10-00-26)
- G4TransportationManager is cleaned when geometry is rebuilt from
  scratch. Addressing further to bug report #1665. Co-working with
  geomnav-V10-00-08.

August 21st, 2014 M.Asai (run-V10-00-25)