@@ -86,6 +86,7 @@ class G4RunMessenger: public G4UImessenger
     G4UIcmdWithAnInteger *      verboseCmd;
     G4UIcmdWithAnInteger *      printProgCmd;
     G4UIcmdWithAnInteger *      nThreadsCmd;
+    G4UIcmdWithoutParameter *   maxThreadsCmd;
     G4UIcmdWithAnInteger *      pinAffinityCmd;
     G4UIcmdWithAnInteger *      evModCmd;
     G4UIcmdWithAString *        dumpRegCmd;
