@@ -58,11 +58,11 @@
 // This creates in memory an "array", pointed by "sharedOffset" of capacity "totalspace"
 // The array contains "totalobj" (<=totalspace) instances (i.e. the array has
 // un-initialized spaces)
-// Note that also the TLS variables "offset" and "slavetotalspace" have also the same stuff
+// Note that also the TLS variables "offset" and "workertotalspace" have also the same stuff
 // When a worker thread is started we can call g4vuplsplitter.NewSubInstances()
 // This will simply allocate enough space in the TLS space "offset" and call
 // T::initialize() onto the new created methods.
-// Alternatively one can call, when the worker thread start, g4vuplsplitter.SlaveCopySubInstanceArray()
+// Alternatively one can call, when the worker thread start, g4vuplsplitter.workerCopySubInstanceArray()
 // That will copy the content of master thread "array" into the TLS one
 
 // To see this stuff in action see:
@@ -88,13 +88,13 @@ class G4VUPLSplitter
         totalobj++;
         //If the number of objects is larger than the available spaces,
         //a re-allocation is needed
-        if (totalobj > slavetotalspace)  {
+        if (totalobj > workertotalspace)  {
         	l.unlock();
         	NewSubInstances();
         	l.lock();
         }
         //Since this is called by Master thread, we can remember this
-        totalspace = slavetotalspace;
+        totalspace = workertotalspace;
         sharedOffset = offset;
         return (totalobj - 1);
     }
@@ -105,13 +105,13 @@ class G4VUPLSplitter
       // by the subclass.
     {
     	G4AutoLock l(&mutex);
-    	if (slavetotalspace  >= totalobj)  { return; }
+    	if (workertotalspace  >= totalobj)  { return; }
         //Remember current large size
-        G4int originaltotalspace = slavetotalspace;
+        G4int originaltotalspace = workertotalspace;
         //Increase its size by some value (purely arbitrary)
-        slavetotalspace = totalobj + 512;
+        workertotalspace = totalobj + 512;
         //Now re-allocate new space
-        offset = (T *) realloc(offset, slavetotalspace * sizeof(T));
+        offset = (T *) realloc(offset, workertotalspace * sizeof(T));
         if (offset == 0)
         {
             G4Exception("G4VUPLSplitter::NewSubInstances()",
@@ -119,13 +119,13 @@ class G4VUPLSplitter
             return;
         }
         //The newly created objects need to be initialized
-        for (G4int i = originaltotalspace; i < slavetotalspace; i++)
+        for (G4int i = originaltotalspace; i < workertotalspace; i++)
         {
             offset[i].initialize();
         }
     }
 
-    void FreeSlave()
+    void FreeWorker()
       // Invoked by all threads to free the subinstance array.
     {
       if (!offset)  { return; }
@@ -133,7 +133,44 @@ class G4VUPLSplitter
       offset = 0;
     }
 
-    void SlaveCopySubInstanceArray()
+    T* GetOffset() { return offset; }
+    
+    void UseWorkArea( T* newOffset )
+    {
+        // Use recycled work area - which was created previously
+        if( offset && offset!=newOffset )
+        {
+            if( newOffset != offset )
+            {
+                G4Exception("G4VUPLSplitter::UseWorkspace()",
+                            "TwoWorkspaces", FatalException,
+                            "Thread already has workspace - cannot use another.");
+            }
+            else
+            {
+                G4Exception("G4VUPLSplitter::UseWorkspace()",
+                            "TwoWorkspaces", JustWarning,
+                            "Thread already has a workspace - trying to set the same again.");
+            }
+        }
+        offset= newOffset;
+        // totalobj= numObjects;
+        // totalspace= numSpace;
+    }
+    
+    T* FreeWorkArea() // G4int* numObjects, G4int* numSpace)
+    {
+        // Detach this thread from this Location
+        // The object which calls this method is responsible for it.
+        //
+        T* offsetRet= offset;
+        
+        offset= 0;
+        
+        return offsetRet;
+    }
+    
+    void WorkerCopySubInstanceArray()
     //Invoked by each worker thread to copy all subinstances array from
     //the master thread
     {
@@ -145,7 +182,7 @@ class G4VUPLSplitter
         offset = (T *)realloc(offset,totalspace * sizeof(T));
         if (offset == 0)
         {
-            G4Exception("G4VUPLSplitter::SlaveCopySubInstanceArray()",
+            G4Exception("G4VUPLSplitter::WorkerCopySubInstanceArray()",
                         "OutOfMemory", FatalException, "Cannot malloc space!");
             return;
         }
@@ -154,7 +191,7 @@ class G4VUPLSplitter
     }
   public:
 
-    G4RUN_DLL G4ThreadLocalStatic G4int slavetotalspace; //Per-thread available number of slots
+    G4RUN_DLL G4ThreadLocalStatic G4int workertotalspace; //Per-thread available number of slots
     G4RUN_DLL G4ThreadLocalStatic T* offset; //Pointer to first instance of an array
 
   private:
